# ppylttry

./: LICENSE  brainstormy.ipynb  learnstormy.ipynb  pyproject.toml
data/: five.csv
